fixed alignment and accessability issues

--- a/frontend/src/Profile/Profile.css
+++ b/frontend/src/Profile/Profile.css
@@ -5,9 +5,9 @@
   background-color: #e2e8f0;
   height: 100vh;
 }
-.main-body {
+/* .main-body {
   padding: 15px;
-}
+} */
 
 .profile-card {
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
